Bug 160371 - [testcase] absolute positioned img inside relative div height miscalculation with test case
Summary: [testcase] absolute positioned img inside relative div height miscalculation ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml renderer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-04 18:03 UTC by Michael Kreitzer
Modified: 2008-04-14 17:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Kreitzer 2008-04-04 18:03:06 UTC
Version:            (using Devel)
Installed from:    Compiled sources

An absolutely positioned image placed at 0, 0 with a height and width of 100% inside a relatively positioned div does not have the proper height. It comes up short. This works correctly in safari 3.1, IE 8 beta 1, firefox 2 and 3, Opera 9.5 beta 1, and even tkhtml. The test case is here:

http://mrgrim.meanasspenguin.org/test.html
Comment 1 Germain Garand 2008-04-14 17:43:53 UTC
SVN commit 796959 by ggarand:

.Fix solving of percentage height for positioned elements, in light
 of the nota bene in CSS 2.1-10.5.

.Satisfyingly, the same code path can also be used to solve percentage
 intrinsic height (10.6.2) - (#160371)

.Fix some errors in the implicit height code, that wasn't converting to
 content height.

BUG:160371


 M  +14 -5     render_box.cpp  
 M  +1 -1      render_box.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=796959