.Fix solving of percentage height for positioned elements, in light  of the nota bene in CSS 2.1-10.5.

.Satisfyingly, the same code path can also be used to solve percentage
 intrinsic height (10.6.2) - (#160371)

.Fix some errors in the implicit height code, that wasn't converting to
 content height.

BUG:160371

svn path=/trunk/KDE/kdelibs/; revision=796959